--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,12 @@
     "php-http/message": "^1.3"
   },
   "require-dev": {
-    "phpspec/phpspec": "^3.1"
+    "phpspec/phpspec": "^3.1",
+    "friendsofphp/php-cs-fixer": "^2.0.0",
+    "sllh/php-cs-fixer-styleci-bridge": "^2.1"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-0": {
       "Fitbug": "src"
