--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,30 @@
 language: php
 
-php:
-    - 5.6
-    - 7.0
-    - 7.1
-    - hhvm
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 matrix:
-    fast_finish: true
+    fast_finish: false
     include:
         - php: 5.6
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
+        - php: 7.0
+          env: PREFIX="phpdbg -qrr "
+        - php: 7.1
+          env: PREFIX="phpdbg -qrr "
+        - php: nightly
+          env: PREFIX="phpdbg -qrr "
 
 before_script:
-  - composer install
-  - composer $COMPOSER_FLAGS update
+  - composer install --no-interaction
+  - composer $COMPOSER_FLAGS update --no-interaction
 
 script:
   - composer validate
+  - ./vendor/bin/php-cs-fixer fix --dry-run
   - find src spec -name "*.php" -print0 | xargs -0 -n1 -P8 php -l
-  - vendor/bin/phpspec run
+  - ${PREFIX} vendor/bin/phpspec run
+
+after_success:
+  - travis_retry php vendor/bin/coveralls
