--- a/.travis.yml
+++ b/.travis.yml
@@ -2,29 +2,42 @@ language: php
 
 cache:
   directories:
-    - $HOME/.composer/cache
+    - "${HOME}/.composer/cache"
 
 matrix:
-    fast_finish: false
-    include:
-        - php: 5.6
-          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
-        - php: 7.0
-          env: PREFIX="phpdbg -qrr "
-        - php: 7.1
-          env: PREFIX="phpdbg -qrr "
-        - php: nightly
-          env: PREFIX="phpdbg -qrr "
+  fast_finish: false
+  include: 
+    - env:
+        - "COMPOSER_FLAGS=\"--prefer-stable --prefer-lowest\""
+        - XDEBUG_OFF=false
+      php: 5.6
+    - env:
+        - XDEBUG_OFF=false
+      php: 5.6
+    - env:
+        - "PREFIX=\"phpdbg -qrr \""
+        - XDEBUG_OFF=true
+      php: 7.0
+    - env:
+        - "PREFIX=\"phpdbg -qrr \""
+        - XDEBUG_OFF=true
+      php: 7.1
+    - env:
+        - "PREFIX=\"phpdbg -qrr \""
+        - XDEBUG_OFF=true
+      php: nightly
 
-before_script:
-  - composer install --no-interaction
-  - composer $COMPOSER_FLAGS update --no-interaction
+before_install:
+  - if [ "$XDEBUG_OFF" == "true" ] ; then phpenv config-rm xdebug.ini || true ; fi
+install:
+  - "composer install --no-interaction"
+  - "composer update $COMPOSER_FLAGS --no-interaction"
 
-script:
-  - composer validate
-  - ./vendor/bin/php-cs-fixer fix --dry-run
-  - find src spec -name "*.php" -print0 | xargs -0 -n1 -P8 php -l
-  - ${PREFIX} vendor/bin/phpspec run
+script: 
+  - "composer validate"
+  - "./vendor/bin/php-cs-fixer fix --dry-run"
+  - "find src spec -name \"*.php\" -print0 | xargs -0 -n1 -P8 php -l"
+  - "${PREFIX} vendor/bin/phpspec run"
 
 after_success:
-  - travis_retry php vendor/bin/coveralls
+  - "travis_retry php vendor/bin/coveralls"
